app/assets/stylesheets/core/_errors.scss
.error, .hint {
  display: inline-block;
}

.error {
  color: $alert;
}

.error_notification, .hint {
  color: $warning;
}

.flash {
  font-size: 14px;
  width: 400px;
  max-width: calc(100% - 50px);
  display: flex;
  flex-direction: column;
  padding: 15px 20px;
  border-radius: 5px;
  color: $secondary-color;
  background-color: $primary-color;
  border-top: solid 5px rgba(255, 255, 255, 0.25);
  position: fixed;
  top: 25px;
  right: 25px;
  z-index: 999;
  animation: bounceInRight;
  animation-duration: 1.5s;
  animation-delay: .15s;
  animation-timing-function: ease-in-out;

  .flash-close {
    position: absolute;
    right: -10px;
    top: -15px;
    background-color: $secondary-color;
    border-radius: 50%;
    width: 24px;
    height: 24px;
    cursor: pointer;

    &:before, &:after {
      content: "";
      width: 12px;
      height: 2px;
      background-color: $primary-color;
      position: absolute;
      left: 50%;
      top: 50%;
      margin: -1px -6px;
    }

    &:before {
      transform: rotate(-45deg);      
    }

    &:after {
      transform: rotate(45deg);      
    }
  }

  &.flash-search {
    border: solid 1px $dark-blue;
    position: relative;
    top: 0;
    right: 0;
    width: 100%;
    animation: none;
  }

  .flash-title, .flash-body {
    color: $primary-color;
  }

  &.inline {
    flex-direction: row;
  }

  p {
    font-weight: 400;
    
    &.flash-title {
      font-size: 1.15em;
      font-weight: 700;
    }
  }

  i, span {
    &:nth-child(n+2) {
      margin-left: 10px;
    }
  }

  &.success {
    background-color: rgba($success, .95);
  }

  &.warning {
    background-color: rgba($warning, .95);
  }

  &.alert {
    background-color: rgba($alert, .95);
  }

  &.info, &.notice {
    background-color: rgba($blue, .95);
  }

  &.error {
    background-color: $primary-color;

    .flash-title {
      color: $alert;
    }

    .flash-body {
      color: $secondary-color;
    }
  }
}

.field_with_errors {
  label {
    color: $alert !important;
  }

  input, select, textarea, label, .select-selected {
    border-color: $alert !important;
  }

  .error {
    padding: 6px 10px 5px 10px;
    background-color: #FFDDE3;
    color: $alert;
    position: relative;
    margin-top: 10px;
    font-size: .9em;
    font-weight: 700;

    &:first-letter {
      text-transform: uppercase;
    }

    &:before {
      content: "";
      position: absolute;
      left: 10px;
      bottom: 100%;
      border-left: solid 7px transparent;
      border-right: solid 7px transparent;
      border-bottom: solid 7px #FFDDE3;
    }
  }
}

#error_explanation {
  background-color: #FFDDE3;

  ul {
    padding: 10px;
    list-style: none;

    li {
      color: $alert;

      &:nth-of-type(n+2) {
        margin-top: 15px;
      }
    }
  }
}

